move home images to images dir

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="featuredgames.png" alt="Featured Projects Banner"></div>
+        <div class="parallax"><img src="images/home/featuredgames.png" alt="Featured Projects Banner"></div>
     </div>
 
     <div class="container">
@@ -78,7 +78,7 @@
                 <div class="col s12 m6 l6">
                     <div class="card hoverable black">
                         <div class="card-image">
-                            <img src="sotremake.jpg" />
+                            <img src="images/home/sotremake.jpg" />
                             <span class="card-title">Prince of Persia: Sands of Time Remake</span>
                         </div>
                         <div class="card-content white-text">
@@ -127,7 +127,7 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="mywork.PNG" alt="My Work Banner"></div>
+        <div class="parallax"><img src="images/home/mywork.PNG" alt="My Work Banner"></div>
     </div>
 
     <div class="container">
@@ -253,7 +253,7 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="aboutme.png" alt="About Me Banner"></div>
+        <div class="parallax"><img src="images/home/aboutme.png" alt="About Me Banner"></div>
     </div>
 
     <div class="container">
