move more home images

--- a/index.html
+++ b/index.html
@@ -340,19 +340,19 @@
                         <div class="slider">
                             <ul class="slides">
                                 <li>
-                                    <img src="mit.jpg">
+                                    <img src="images/home/mit.jpg">
 
                                 </li>
                                 <li>
-                                    <img src="ue4.jpg">
+                                    <img src="images/home/ue4.jpg">
 
                                 </li>
                                 <li>
-                                    <img src="W3C.JPG">
+                                    <img src="images/home/W3C.JPG">
 
                                 </li>
                                 <li>
-                                    <img src="BEC.jpg">
+                                    <img src="images/home/BEC.jpg">
 
                                 </li>
                             </ul>
