add remaining index images

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="col s12 m6 l6">
                     <div class="card hoverable black">
                         <div class="card-image">
-                            <img src="lightless_banner.png" />
+                            <img src="images/home/lightless_banner.png" />
                             <span class="card-title">Lightless (Group Project)</span>
                         </div>
                         <div class="card-content white-text">
@@ -136,21 +136,21 @@
                 <div class="col s12 m4 l4">
                     <div class="card hoverable black">
                         <div class="card-image">
-                            <img src="leveldesign.png">
+                            <img src="images/home/leveldesign.png">
                             <span class="card-title">Level Design</span>
                         </div>
                         <div class="card-content white-text">
                             <p>Level layouts, design and analyses, seminars.</p>
                         </div>
                         <div class="card-action">
-                            <a href="leveldesign.html" target="_blank">Check out My Work</a>
+                            <a href="images/home/leveldesign.html" target="_blank">Check out My Work</a>
                         </div>
                     </div>
                 </div>
                 <div class="col s12 m4 l4">
                     <div class="card hoverable black">
                         <div class="card-image">
-                            <img src="gamedesign.JPG" src="height: 319px; width:792px">
+                            <img src="images/home/gamedesign.JPG" src="height: 319px; width:792px">
                             <span class="card-title">Game Design</span>
                         </div>
                         <div class="card-content white-text">
@@ -164,7 +164,7 @@
                 <div class="col s12 m4 l4">
                     <div class="card hoverable black">
                         <div class="card-image">
-                            <img src="tempest.jpg">
+                            <img src="images/home/tempest.jpg">
                             <span class="card-title">Game Development Processes</span>
                         </div>
                         <div class="card-content white-text">
@@ -182,7 +182,7 @@
                 <div class="col s12 m4 l4">
                     <div class="card hoverable black">
                         <div class="card-image">
-                            <img src="gameplay.jpeg" src="height: 319px; width:792px">
+                            <img src="images/home/gameplay.jpeg" src="height: 319px; width:792px">
                             <span class="card-title" style="color: black">Gameplay and Prototyping</span>
                         </div>
                         <div class="card-content white-text">
@@ -196,7 +196,7 @@
                 <div class="col s12 m4 l4">
                     <div class="card hoverable black">
                         <div class="card-image">
-                            <img src="maya.jpeg">
+                            <img src="images/home/maya.jpeg">
                             <span class="card-title" style="color: black">Modeling, Texturing and Animation</span>
                         </div>
                         <div class="card-content white-text">
@@ -211,7 +211,7 @@
                 <div class="col s12 m4 l4">
                     <div class="card hoverable black">
                         <div class="card-image">
-                            <img src="production_studio.jpeg">
+                            <img src="images/home/production_studio.jpeg">
                             <span class="card-title">VR Game Dev</span>
                         </div>
                         <div class="card-content white-text">
@@ -229,7 +229,7 @@
                 <div class="col s12 m4 l4">
                     <div class="card hoverable black">
                         <div class="card-image">
-                            <img src="Game%20Balance%20Cover.png" src="height: 319px; width:792px">
+                            <img src="images/home/Game%20Balance%20Cover.png" src="height: 319px; width:792px">
                             <span class="card-title black-text">Game Balance</span>
                         </div>
                         <div class="card-content white-text">
@@ -237,7 +237,6 @@
                         </div>
                         <div class="card-action">
                             <a href="gamebalance.html" target="_blank">Check out My Work</a>
-                            <!--<a onclick="Materialize.toast('Page Coming Soon!', 4000)">Check out My Work</a>-->
                         </div>
                     </div>
                 </div>
@@ -262,7 +261,7 @@
                 <div class="col s12 m6 l6">
                     <div class="card hoverable black">
                         <div class="card-image">
-                            <img src="me.jpg">
+                            <img src="images/home/me.jpg">
                         </div>
                         <div class="card-content">
                             <p>
