rename production studio file

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                 festival.</p>
                         </div>
                         <div class="card-action">
-                            <a href="production_studio.html" target="_blank">Check out My Work</a>
+                            <a href="vr_game_dev.html" target="_blank">Check out My Work</a>
                         </div>
                     </div>
                 </div>
