update background for all pages

--- a/gamebalance.html
+++ b/gamebalance.html
@@ -44,7 +44,7 @@
     <!-- snow end -->
 </head>
 
-<body bgcolor="orange">
+<body>
     <div class="navbar-fixed">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
@@ -71,9 +71,12 @@
                     <p>Using the machinations tool to make an XP system for an RPG game.</p>
                 </div>
                 <div class="card-action">
-                    <a href="Machinations%20Diagram%20Snapshot%20-%20Varun%20Bajaj.PNG" download="Varun Sunil Bajaj - Machinations Diagram.png">Machinations Diagram</a>
-                    <a href="Machinations%20Diagram%20Explained%20-%20Varun%20Bajaj.docx" download="Varun Sunil Bajaj - Machinations Diagram Explained.docx">Diagram Explained</a>
-                    <a href="RPG%20Machinations%20-%20Varun%20Bajaj.xml" download="Varun Sunil Bajaj - XP System.xml">Download Machinations File</a>
+                    <a href="Machinations%20Diagram%20Snapshot%20-%20Varun%20Bajaj.PNG"
+                        download="Varun Sunil Bajaj - Machinations Diagram.png">Machinations Diagram</a>
+                    <a href="Machinations%20Diagram%20Explained%20-%20Varun%20Bajaj.docx"
+                        download="Varun Sunil Bajaj - Machinations Diagram Explained.docx">Diagram Explained</a>
+                    <a href="RPG%20Machinations%20-%20Varun%20Bajaj.xml"
+                        download="Varun Sunil Bajaj - XP System.xml">Download Machinations File</a>
                 </div>
             </div>
         </div>
@@ -88,7 +91,8 @@
                     <p>Designing a game in favor of the house while seeming fair to the player at the same time!</p>
                 </div>
                 <div class="card-action">
-                    <a href="Evil%20Gambling%20Game%20-%20Varun%20Sunil%20Bajaj.docx" download="Varun Sunil Bajaj - Evil Gambling Game.docx">Download Rule Sheet</a>
+                    <a href="Evil%20Gambling%20Game%20-%20Varun%20Sunil%20Bajaj.docx"
+                        download="Varun Sunil Bajaj - Evil Gambling Game.docx">Download Rule Sheet</a>
                 </div>
             </div>
         </div>
@@ -97,13 +101,15 @@
             <div class="card hoverable black">
                 <div class="card-image">
                     <img src="Pic%20(2).jpg">
-                    <span class="card-title">Creating a Balanced Expansion Pack and a New Mechanic for a Micro TCG (Individual)</span>
+                    <span class="card-title">Creating a Balanced Expansion Pack and a New Mechanic for a Micro TCG
+                        (Individual)</span>
                 </div>
                 <div class="card-content white-text">
                     <p>Using Excel and Playtesting to create a balanced expansion pack!</p>
                 </div>
                 <div class="card-action">
-                    <a href="Micro%20TCG%20-%20Varun%20Bajaj.xlsx" download="Varun Sunil Bajaj - Micro TCG">Download Card Pack</a>
+                    <a href="Micro%20TCG%20-%20Varun%20Bajaj.xlsx" download="Varun Sunil Bajaj - Micro TCG">Download
+                        Card Pack</a>
                 </div>
             </div>
         </div>
@@ -120,7 +126,8 @@
                     <p>Creating an AI using formulae in Excel to defeat the opponent!</p>
                 </div>
                 <div class="card-action">
-                    <a href="DiceGameAI%20-%20Varun%20Sunil%20Bajaj.xlsx" download="Varun Sunil Bajaj - Dice Game AI.xlsx">Dice Game AI</a>
+                    <a href="DiceGameAI%20-%20Varun%20Sunil%20Bajaj.xlsx"
+                        download="Varun Sunil Bajaj - Dice Game AI.xlsx">Dice Game AI</a>
                 </div>
             </div>
         </div>
@@ -132,11 +139,14 @@
                     <span class="card-title">Defeating an AI in an Idle Game (Individual)</span>
                 </div>
                 <div class="card-content white-text">
-                    <p>Using formuale in Excel to figure out a move list to defeat the opponent in a custom game designed for this challenge!</p>
+                    <p>Using formuale in Excel to figure out a move list to defeat the opponent in a custom game
+                        designed for this challenge!</p>
                 </div>
                 <div class="card-action">
-                    <a href="Idle%20Game%20Tournament%20Sheet%20-%20Rules.xlsx" download="Varun Sunil Bajaj - Idle Game Challenge Rules.xlsx">Rules for Challenge</a>
-                    <a href="Idle%20Game%20Tournament%20Strategy%20and%20Move%20List%20-%20Varun%20Sunil%20Bajaj.docx" download="Varun Sunil Bajaj - Idle Game Strategy.docx">My Strategy</a>
+                    <a href="Idle%20Game%20Tournament%20Sheet%20-%20Rules.xlsx"
+                        download="Varun Sunil Bajaj - Idle Game Challenge Rules.xlsx">Rules for Challenge</a>
+                    <a href="Idle%20Game%20Tournament%20Strategy%20and%20Move%20List%20-%20Varun%20Sunil%20Bajaj.docx"
+                        download="Varun Sunil Bajaj - Idle Game Strategy.docx">My Strategy</a>
                     <a href="Score%20Screenshot.png" download="Varun Sunil Bajaj - Idle Game Score.png">My Score</a>
                     <a href="Game%20Files%20(2).zip" download="Idle Game Files.zip">Download Game</a>
                 </div>
@@ -154,7 +164,8 @@
                 </div>
                 <div class="card-action">
                     <a href="Questions.docx" download="Questions.docx">Questions</a>
-                    <a href="Solutions%20-%20Varun%20Sunil%20Bajaj.xlsx" download="Varun Sunil Bajaj - Solutions.xlsx">My Solutions</a>
+                    <a href="Solutions%20-%20Varun%20Sunil%20Bajaj.xlsx"
+                        download="Varun Sunil Bajaj - Solutions.xlsx">My Solutions</a>
                 </div>
             </div>
         </div>
@@ -172,7 +183,8 @@
                 </div>
                 <div class="card-action">
                     <a href="Question.txt" download="Question.txt">Question</a>
-                    <a href="Challenge%20X3%20-%20Varun%20Sunil%20Bajaj.xlsx" download="Varun Sunil Bajaj - Solutions.xlsx">My Solutions</a>
+                    <a href="Challenge%20X3%20-%20Varun%20Sunil%20Bajaj.xlsx"
+                        download="Varun Sunil Bajaj - Solutions.xlsx">My Solutions</a>
                 </div>
             </div>
         </div>
@@ -199,10 +211,13 @@
                     <span class="card-title">Presentation on Weapon Balance in Halo 3 (Individual)</span>
                 </div>
                 <div class="card-content white-text">
-                    <p>A seminar I presented, summarizing the <a href="https://www.youtube.com/watch?v=R6reHC6OzGo" target="_blank">GDC talk</a> "Design in Detail: Changing the Time Between Shots for the Sniper Rifle from 0.5 to 0.7 Seconds for Halo 3" by Jaime Griesemer!</p>
+                    <p>A seminar I presented, summarizing the <a href="https://www.youtube.com/watch?v=R6reHC6OzGo"
+                            target="_blank">GDC talk</a> "Design in Detail: Changing the Time Between Shots for the
+                        Sniper Rifle from 0.5 to 0.7 Seconds for Halo 3" by Jaime Griesemer!</p>
                 </div>
                 <div class="card-action">
-                    <a href="Weapon%20Balance%20in%20Halo%203%20and%20what%20we%20can%20learn%20from%20it%20-%20Varun%20Bajaj.pdf" download="Varun Sunil Bajaj - Weapon Balance in Halo 3.pdf">Download</a>
+                    <a href="Weapon%20Balance%20in%20Halo%203%20and%20what%20we%20can%20learn%20from%20it%20-%20Varun%20Bajaj.pdf"
+                        download="Varun Sunil Bajaj - Weapon Balance in Halo 3.pdf">Download</a>
                 </div>
             </div>
         </div>
@@ -220,7 +235,8 @@
                 </div>
                 <div class="card-action">
                     <a href="Questions%20(2).docx" download="Questions.docx">Questions</a>
-                    <a href="Solutions.zip.zip" download="Varun Sunil Bajaj - Probability Solutions.zip">My Solutions</a>
+                    <a href="Solutions.zip.zip" download="Varun Sunil Bajaj - Probability Solutions.zip">My
+                        Solutions</a>
                 </div>
             </div>
         </div>
@@ -230,11 +246,16 @@
     <footer class="page-footer black">
         <div class="container">
             <ul style="list-style:none;" class="center">
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.youtube.com/PhoenixFruitloops" target="_blank"><i class="red-text fa fa-youtube-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.twitter.com/VarunBajaj22" target="_blank"><i class="blue-text fa fa-twitter-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.facebook.com/varun.bajaj.566" target="_blank"><i class="indigo-text fa fa-facebook-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.plus.google.com/PhoenixFruitloops" target="_blank"><i class="red-text fa fa-google-plus-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.instagram.com/VarunBajaj22" target="_blank"><i class="orange-text fa fa-instagram fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.youtube.com/PhoenixFruitloops"
+                        target="_blank"><i class="red-text fa fa-youtube-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.twitter.com/VarunBajaj22"
+                        target="_blank"><i class="blue-text fa fa-twitter-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.facebook.com/varun.bajaj.566"
+                        target="_blank"><i class="indigo-text fa fa-facebook-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.plus.google.com/PhoenixFruitloops"
+                        target="_blank"><i class="red-text fa fa-google-plus-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.instagram.com/VarunBajaj22"
+                        target="_blank"><i class="orange-text fa fa-instagram fa-3x"></i></a></li>
             </ul>
         </div>
         <div class="footer-copyright">
@@ -247,7 +268,7 @@
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('.scrollspy').scrollSpy();
             $('.slider').slider({
                 full_width: true
