--- a/gamedev.html
+++ b/gamedev.html
@@ -44,7 +44,7 @@
     <!-- snow end -->
 </head>
 
-<body bgcolor="orange">
+<body>
     <div class="navbar-fixed">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
@@ -71,7 +71,8 @@
                     <p>Preparing a QA sheet for the popular arcade game, Tempest!</p>
                 </div>
                 <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Tempest Quality Assurance Process.zip" download="Varun Sunil Bajaj - Game Development Processes - Tempest Quality Assurance Process.zip">Download</a>
+                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Tempest Quality Assurance Process.zip"
+                        download="Varun Sunil Bajaj - Game Development Processes - Tempest Quality Assurance Process.zip">Download</a>
                 </div>
             </div>
         </div>
@@ -85,7 +86,8 @@
                     <p>Presentation for a game we pitched in class!</p>
                 </div>
                 <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Rumble in the Jungle Game Pitch.pptx" download="Varun Sunil Bajaj - Game Development Processes - Rumble in the Jungle Game Pitch.pptx">Download</a>
+                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Rumble in the Jungle Game Pitch.pptx"
+                        download="Varun Sunil Bajaj - Game Development Processes - Rumble in the Jungle Game Pitch.pptx">Download</a>
                 </div>
             </div>
         </div>
@@ -99,7 +101,8 @@
                     <p>An HCD for a game I designed called Esc, set in ancient Egypt.</p>
                 </div>
                 <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Esc High Concept Document.docx" download="Varun Sunil Bajaj - Game Development Processes - Esc High Concept Document.docx">Download</a>
+                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Esc High Concept Document.docx"
+                        download="Varun Sunil Bajaj - Game Development Processes - Esc High Concept Document.docx">Download</a>
                 </div>
             </div>
         </div>
@@ -115,7 +118,8 @@
                     <p>Creating a feature-system matrix and a risk assessment grid for Donkey Kong.</p>
                 </div>
                 <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Donkey Kong - Features, Systems, Feature-Systems Matrix & Risk Assessment Grid.docx" download="Varun Sunil Bajaj - Game Development Processes - Donkey Kong - Features, Systems, Feature-Systems Matrix & Risk Assessment Grid.docx">Download</a>
+                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Donkey Kong - Features, Systems, Feature-Systems Matrix & Risk Assessment Grid.docx"
+                        download="Varun Sunil Bajaj - Game Development Processes - Donkey Kong - Features, Systems, Feature-Systems Matrix & Risk Assessment Grid.docx">Download</a>
                 </div>
             </div>
         </div>
@@ -129,7 +133,8 @@
                     <p>Analysing the release and market performance of Call of Duty Modern Warfare.</p>
                 </div>
                 <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Call of Duty Modern Warfare Postmortem.docx" download="Varun Sunil Bajaj - Game Development Processes - Call of Duty Modern Warfare Postmortem.docx">Download</a>
+                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Call of Duty Modern Warfare Postmortem.docx"
+                        download="Varun Sunil Bajaj - Game Development Processes - Call of Duty Modern Warfare Postmortem.docx">Download</a>
                 </div>
             </div>
         </div>
@@ -143,7 +148,8 @@
                     <p>A discussion about Blue Sky Open Idea Formation and Brainstorming.</p>
                 </div>
                 <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Blue Sky Open Idea Formation and Brainstorming.docx" download="Varun Sunil Bajaj - Game Development Processes - Blue Sky Open Idea Formation and Brainstorming.docx">Download</a>
+                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Blue Sky Open Idea Formation and Brainstorming.docx"
+                        download="Varun Sunil Bajaj - Game Development Processes - Blue Sky Open Idea Formation and Brainstorming.docx">Download</a>
                 </div>
             </div>
         </div>
@@ -151,11 +157,16 @@
     <footer class="page-footer black">
         <div class="container">
             <ul style="list-style:none;" class="center">
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.youtube.com/PhoenixFruitloops" target="_blank"><i class="red-text fa fa-youtube-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.twitter.com/VarunBajaj22" target="_blank"><i class="blue-text fa fa-twitter-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.facebook.com/varun.bajaj.566" target="_blank"><i class="indigo-text fa fa-facebook-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.plus.google.com/PhoenixFruitloops" target="_blank"><i class="red-text fa fa-google-plus-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.instagram.com/VarunBajaj22" target="_blank"><i class="orange-text fa fa-instagram fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.youtube.com/PhoenixFruitloops"
+                        target="_blank"><i class="red-text fa fa-youtube-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.twitter.com/VarunBajaj22"
+                        target="_blank"><i class="blue-text fa fa-twitter-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.facebook.com/varun.bajaj.566"
+                        target="_blank"><i class="indigo-text fa fa-facebook-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.plus.google.com/PhoenixFruitloops"
+                        target="_blank"><i class="red-text fa fa-google-plus-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.instagram.com/VarunBajaj22"
+                        target="_blank"><i class="orange-text fa fa-instagram fa-3x"></i></a></li>
             </ul>
         </div>
         <div class="footer-copyright">
@@ -168,7 +179,7 @@
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('.scrollspy').scrollSpy();
             $('.slider').slider({
                 full_width: true
