--- a/gameplay_prototyping.html
+++ b/gameplay_prototyping.html
@@ -44,7 +44,7 @@
     <!-- snow end -->
 </head>
 
-<body bgcolor="orange">
+<body>
     <div class="navbar-fixed">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
