--- a/vr_game_dev.html
+++ b/vr_game_dev.html
@@ -44,7 +44,7 @@
     <!-- snow end -->
 </head>
 
-<body bgcolor="orange">
+<body>
     <div class="navbar-fixed">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
@@ -75,22 +75,24 @@
                     <a onclick="showhide_lvl1();">View Level 1 Pitch</a>
                     <a onclick="showhide_lvl2();">View Level 2 Pitch</a>
                     <a onclick="showhide_game();">Walkthrough</a><br>
-                    <a href="Escape%20Room%20VR%20-%20Final%20Design%20Document.pdf" download="Varun Sunil Bajaj - Escape Room Game Design Document.pdf">Download Game Design Document</a>
+                    <a href="Escape%20Room%20VR%20-%20Final%20Design%20Document.pdf"
+                        download="Varun Sunil Bajaj - Escape Room Game Design Document.pdf">Download Game Design
+                        Document</a>
                 </div>
                 <div class="video-container" id="lvl1" style="display: none;">
                     <video class="responsive-video" controls id="lvl1">
-                                        <source src="Room%201%20Pitch.mp4" type="video/mp4">
-                                    </video>
+                        <source src="Room%201%20Pitch.mp4" type="video/mp4">
+                    </video>
                 </div>
                 <div class="video-container" id="lvl2" style="display: none;">
                     <video class="responsive-video" controls id="lvl2">
-                                        <source src="Room%202%20Pitch.mp4" type="video/mp4">
-                                    </video>
+                        <source src="Room%202%20Pitch.mp4" type="video/mp4">
+                    </video>
                 </div>
                 <div class="video-container" id="game" style="display: none;">
                     <video class="responsive-video" controls id="game">
-                                        <source src="Escape%20Room%20VR%20Final%20Game%20Gameplay.mp4" type="video/mp4">
-                                    </video>
+                        <source src="Escape%20Room%20VR%20Final%20Game%20Gameplay.mp4" type="video/mp4">
+                    </video>
                 </div>
             </div>
         </div>
@@ -98,11 +100,16 @@
     <footer class="page-footer black">
         <div class="container">
             <ul style="list-style:none;" class="center">
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.youtube.com/PhoenixFruitloops" target="_blank"><i class="red-text fa fa-youtube-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.twitter.com/VarunBajaj22" target="_blank"><i class="blue-text fa fa-twitter-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.facebook.com/varun.bajaj.566" target="_blank"><i class="indigo-text fa fa-facebook-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.plus.google.com/PhoenixFruitloops" target="_blank"><i class="red-text fa fa-google-plus-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.instagram.com/VarunBajaj22" target="_blank"><i class="orange-text fa fa-instagram fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.youtube.com/PhoenixFruitloops"
+                        target="_blank"><i class="red-text fa fa-youtube-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.twitter.com/VarunBajaj22"
+                        target="_blank"><i class="blue-text fa fa-twitter-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.facebook.com/varun.bajaj.566"
+                        target="_blank"><i class="indigo-text fa fa-facebook-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.plus.google.com/PhoenixFruitloops"
+                        target="_blank"><i class="red-text fa fa-google-plus-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.instagram.com/VarunBajaj22"
+                        target="_blank"><i class="orange-text fa fa-instagram fa-3x"></i></a></li>
             </ul>
         </div>
         <div class="footer-copyright">
@@ -115,7 +122,7 @@
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('.scrollspy').scrollSpy();
             $('.slider').slider({
                 full_width: true
