--- a/gamedesign.html
+++ b/gamedesign.html
@@ -44,7 +44,7 @@
     <!-- snow end -->
 </head>
 
-<body bgcolor="orange">
+<body>
     <div class="navbar-fixed">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
@@ -71,7 +71,8 @@
                     <p>Critiquing the world's most popular puzzle experience!</p>
                 </div>
                 <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 1 - Escape Rooms.pdf" download="Varun Sunil Bajaj - Game Design - Critique 1 - Escape Rooms.pdf">Download</a>
+                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 1 - Escape Rooms.pdf"
+                        download="Varun Sunil Bajaj - Game Design - Critique 1 - Escape Rooms.pdf">Download</a>
                 </div>
             </div>
         </div>
@@ -85,7 +86,8 @@
                     <p>Critiquing this 1996 classic!</p>
                 </div>
                 <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 2 - Crash Bandicoot.pdf" download="Varun Sunil Bajaj - Game Design - Critique 2 - Crash Bandicoot.pdf">Download</a>
+                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 2 - Crash Bandicoot.pdf"
+                        download="Varun Sunil Bajaj - Game Design - Critique 2 - Crash Bandicoot.pdf">Download</a>
                 </div>
             </div>
         </div>
@@ -99,7 +101,8 @@
                     <p>Critiquing Naughty Dog's finest!</p>
                 </div>
                 <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 3 - Uncharted 2 Among Theives.pdf" download="Varun Sunil Bajaj - Game Design - Critique 3 - Uncharted 2 Among Theives.pdf">Download</a>
+                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 3 - Uncharted 2 Among Theives.pdf"
+                        download="Varun Sunil Bajaj - Game Design - Critique 3 - Uncharted 2 Among Theives.pdf">Download</a>
                 </div>
             </div>
         </div>
@@ -115,7 +118,8 @@
                     <p>Critiquing this choice-driven interactive narrative storytelling experience!</p>
                 </div>
                 <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 4 - Life is Strange.pdf" download="Varun Sunil Bajaj - Game Design - Critique 4 - Life is Strange.pdf">Download</a>
+                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 4 - Life is Strange.pdf"
+                        download="Varun Sunil Bajaj - Game Design - Critique 4 - Life is Strange.pdf">Download</a>
                 </div>
             </div>
         </div>
@@ -129,7 +133,8 @@
                     <p>A game pitch for a cross between Inception and The Hunger Games.</p>
                 </div>
                 <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Game Pitch.pptx" download="Varun Sunil Bajaj - Game Design - Game Pitch.pptx">Download</a>
+                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Game Pitch.pptx"
+                        download="Varun Sunil Bajaj - Game Design - Game Pitch.pptx">Download</a>
                 </div>
             </div>
         </div>
@@ -143,8 +148,12 @@
                     <p>A presentation and complete Game Design Document for a one-of-a-kind 2D puzzle platformer.</p>
                 </div>
                 <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Word of the Grey Presentation.pptx" download="Varun Sunil Bajaj - Game Design - Word of the Grey Presentation.pptx">Download Presentation</a>
-                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Word of the Grey Design Document.pdf" download="Varun Sunil Bajaj - Game Design - Word of the Grey Design Document.pdf">Download Design Doc</a>
+                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Word of the Grey Presentation.pptx"
+                        download="Varun Sunil Bajaj - Game Design - Word of the Grey Presentation.pptx">Download
+                        Presentation</a>
+                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Word of the Grey Design Document.pdf"
+                        download="Varun Sunil Bajaj - Game Design - Word of the Grey Design Document.pdf">Download
+                        Design Doc</a>
                 </div>
             </div>
         </div>
@@ -152,11 +161,16 @@
     <footer class="page-footer black">
         <div class="container">
             <ul style="list-style:none;" class="center">
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.youtube.com/PhoenixFruitloops" target="_blank"><i class="red-text fa fa-youtube-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.twitter.com/VarunBajaj22" target="_blank"><i class="blue-text fa fa-twitter-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.facebook.com/varun.bajaj.566" target="_blank"><i class="indigo-text fa fa-facebook-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.plus.google.com/PhoenixFruitloops" target="_blank"><i class="red-text fa fa-google-plus-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.instagram.com/VarunBajaj22" target="_blank"><i class="orange-text fa fa-instagram fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.youtube.com/PhoenixFruitloops"
+                        target="_blank"><i class="red-text fa fa-youtube-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.twitter.com/VarunBajaj22"
+                        target="_blank"><i class="blue-text fa fa-twitter-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.facebook.com/varun.bajaj.566"
+                        target="_blank"><i class="indigo-text fa fa-facebook-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.plus.google.com/PhoenixFruitloops"
+                        target="_blank"><i class="red-text fa fa-google-plus-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.instagram.com/VarunBajaj22"
+                        target="_blank"><i class="orange-text fa fa-instagram fa-3x"></i></a></li>
             </ul>
         </div>
         <div class="footer-copyright">
@@ -169,7 +183,7 @@
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('.scrollspy').scrollSpy();
             $('.slider').slider({
                 full_width: true
