--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- snow end -->
 </head>
 
-<body style="background-color: #222222;">
+<body>
     <div class="navbar-fixed">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
