--- a/maya.html
+++ b/maya.html
@@ -44,7 +44,7 @@
     <!-- snow end -->
 </head>
 
-<body bgcolor="orange">
+<body>
     <div class="navbar-fixed">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
@@ -68,7 +68,8 @@
                     <span class="card-title">Chess Set (Individual)</span>
                 </div>
                 <div class="card-action">
-                    <a href="https://sketchfab.com/models/ac827c4c8b924b2aa04209bcfd885f4a" target="_blank">View 3D Model</a>
+                    <a href="https://sketchfab.com/models/ac827c4c8b924b2aa04209bcfd885f4a" target="_blank">View 3D
+                        Model</a>
                 </div>
             </div>
         </div>
@@ -80,7 +81,8 @@
                     <span class="card-title">Axe (Individual)</span>
                 </div>
                 <div class="card-action">
-                    <a href="https://sketchfab.com/models/73e8deebe4ce47be92bc34eb6ece7f3f" target="_blank">View 3D Model</a>
+                    <a href="https://sketchfab.com/models/73e8deebe4ce47be92bc34eb6ece7f3f" target="_blank">View 3D
+                        Model</a>
                 </div>
             </div>
         </div>
@@ -92,7 +94,8 @@
                     <span class="card-title">Baby Character Model (Individual)</span>
                 </div>
                 <div class="card-action">
-                    <a href="https://sketchfab.com/models/7e34ac6477f84951a09b50aacbf6855a" target="_blank">View 3D Model</a>
+                    <a href="https://sketchfab.com/models/7e34ac6477f84951a09b50aacbf6855a" target="_blank">View 3D
+                        Model</a>
                 </div>
             </div>
         </div>
@@ -105,7 +108,8 @@
                     <span class="card-title">Hammer (Individual)</span>
                 </div>
                 <div class="card-action">
-                    <a href="https://sketchfab.com/models/a9875759dd204c0d9fa16f1b329c5c3b" target="_blank">View 3D Model</a>
+                    <a href="https://sketchfab.com/models/a9875759dd204c0d9fa16f1b329c5c3b" target="_blank">View 3D
+                        Model</a>
                 </div>
             </div>
         </div>
@@ -117,7 +121,8 @@
                     <span class="card-title">Chair (Individual)</span>
                 </div>
                 <div class="card-action">
-                    <a href="https://sketchfab.com/models/4c9536a2d87e4c908be0ba66b72343d7" target="_blank">View 3D Model</a>
+                    <a href="https://sketchfab.com/models/4c9536a2d87e4c908be0ba66b72343d7" target="_blank">View 3D
+                        Model</a>
                 </div>
             </div>
         </div>
@@ -133,8 +138,8 @@
                 </div>
                 <div class="video-container" id="candle" style="display: none;">
                     <video class="responsive-video" controls id="candle">
-                                        <source src="Candle.mp4" type="video/mp4">
-                                    </video>
+                        <source src="Candle.mp4" type="video/mp4">
+                    </video>
                 </div>
             </div>
         </div>
@@ -151,8 +156,8 @@
                 </div>
                 <div class="video-container" id="arm" style="display: none;">
                     <video class="responsive-video" controls id="arm">
-                                        <source src="Mechanical_Arm.mp4" type="video/mp4">
-                                    </video>
+                        <source src="Mechanical_Arm.mp4" type="video/mp4">
+                    </video>
                 </div>
             </div>
         </div>
@@ -160,11 +165,16 @@
     <footer class="page-footer black">
         <div class="container">
             <ul style="list-style:none;" class="center">
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.youtube.com/PhoenixFruitloops" target="_blank"><i class="red-text fa fa-youtube-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.twitter.com/VarunBajaj22" target="_blank"><i class="blue-text fa fa-twitter-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.facebook.com/varun.bajaj.566" target="_blank"><i class="indigo-text fa fa-facebook-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.plus.google.com/PhoenixFruitloops" target="_blank"><i class="red-text fa fa-google-plus-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.instagram.com/VarunBajaj22" target="_blank"><i class="orange-text fa fa-instagram fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.youtube.com/PhoenixFruitloops"
+                        target="_blank"><i class="red-text fa fa-youtube-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.twitter.com/VarunBajaj22"
+                        target="_blank"><i class="blue-text fa fa-twitter-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.facebook.com/varun.bajaj.566"
+                        target="_blank"><i class="indigo-text fa fa-facebook-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.plus.google.com/PhoenixFruitloops"
+                        target="_blank"><i class="red-text fa fa-google-plus-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="http://www.instagram.com/VarunBajaj22"
+                        target="_blank"><i class="orange-text fa fa-instagram fa-3x"></i></a></li>
             </ul>
         </div>
         <div class="footer-copyright">
@@ -177,7 +187,7 @@
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('.scrollspy').scrollSpy();
             $('.slider').slider({
                 full_width: true
