--- a/gamedev.html
+++ b/gamedev.html
@@ -48,7 +48,7 @@
     <div class="navbar-fixed">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
-                <a id="logo-container" href="index.php" class="brand-logo">Varun Bajaj</a>
+                <a id="logo-container" href="index.html" class="brand-logo">Varun Bajaj</a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
                 </ul>
