add gamebalance images

--- a/gamebalance.html
+++ b/gamebalance.html
@@ -64,7 +64,7 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable black">
                 <div class="card-image">
-                    <img src="Pic.PNG">
+                    <img src="images/gamebalance/Pic.PNG">
                     <span class="card-title black-text">Creating an XP system using Machinations (Individual)</span>
                 </div>
                 <div class="card-content white-text">
@@ -84,7 +84,7 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable black">
                 <div class="card-image">
-                    <img src="Pic%20(2).png">
+                    <img src="images/gamebalance/Pic%20(2).png">
                     <span class="card-title">Designing an Evil Gambling Game (Individual)</span>
                 </div>
                 <div class="card-content white-text">
@@ -100,7 +100,7 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable black">
                 <div class="card-image">
-                    <img src="Pic%20(2).jpg">
+                    <img src="images/gamebalance/Pic%20(2).jpg">
                     <span class="card-title">Creating a Balanced Expansion Pack and a New Mechanic for a Micro TCG
                         (Individual)</span>
                 </div>
@@ -119,7 +119,7 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable black">
                 <div class="card-image">
-                    <img src="Pic%20(3).png">
+                    <img src="images/gamebalance/Pic%20(3).png">
                     <span class="card-title">Creating an AI for a Dice Game (Individual)</span>
                 </div>
                 <div class="card-content white-text">
@@ -135,7 +135,7 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable black">
                 <div class="card-image">
-                    <img src="Pic%20(4).PNG">
+                    <img src="images/gamebalance/Pic%20(4).PNG">
                     <span class="card-title">Defeating an AI in an Idle Game (Individual)</span>
                 </div>
                 <div class="card-content white-text">
@@ -156,7 +156,7 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable black">
                 <div class="card-image">
-                    <img src="Pic%20(5).PNG">
+                    <img src="images/gamebalance/Pic%20(5).PNG">
                     <span class="card-title black-text">Computing Probabilities Using Spreadsheets (Individual)</span>
                 </div>
                 <div class="card-content white-text">
@@ -175,7 +175,7 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable black">
                 <div class="card-image">
-                    <img src="Pic%20(3).jpg">
+                    <img src="images/gamebalance/Pic%20(3).jpg">
                     <span class="card-title black-text">Designing a Markov Chain in Excel (Individual)</span>
                 </div>
                 <div class="card-content white-text">
@@ -192,7 +192,7 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable black">
                 <div class="card-image">
-                    <img src="Pic%20(4).jpg">
+                    <img src="images/gamebalance/Pic%20(4).jpg">
                     <span class="card-title black-text">Intransitive Game AI (Individual)</span>
                 </div>
                 <div class="card-content white-text">
@@ -207,7 +207,7 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable black">
                 <div class="card-image">
-                    <img src="Pic%20(5).jpg">
+                    <img src="images/gamebalance/Pic%20(5).jpg">
                     <span class="card-title">Presentation on Weapon Balance in Halo 3 (Individual)</span>
                 </div>
                 <div class="card-content white-text">
@@ -227,7 +227,7 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable black">
                 <div class="card-image">
-                    <img src="Pic%20(6).jpg">
+                    <img src="images/gamebalance/Pic%20(6).jpg">
                     <span class="card-title black-text">Practicing Probability (Individual)</span>
                 </div>
                 <div class="card-content white-text">
