--- a/vr_game_dev.html
+++ b/vr_game_dev.html
@@ -100,16 +100,16 @@
     <footer class="page-footer black">
         <div class="container">
             <ul style="list-style:none;" class="center">
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.youtube.com/PhoenixFruitloops"
-                        target="_blank"><i class="red-text fa fa-youtube-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.twitter.com/VarunBajaj22"
+                <li style="display: inline; padding-right: 5px;"><a href="https://www.linkedin.com/in/VarunBajaj22"
+                        target="_blank"><i class="indigo-text fa fa-linkedin-square fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="https://www.twitter.com/VarunBajaj22"
                         target="_blank"><i class="blue-text fa fa-twitter-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.facebook.com/varun.bajaj.566"
+                <li style="display: inline; padding-right: 5px;"><a href="https://www.facebook.com/varun.bajaj.566"
                         target="_blank"><i class="indigo-text fa fa-facebook-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.plus.google.com/PhoenixFruitloops"
-                        target="_blank"><i class="red-text fa fa-google-plus-square fa-3x"></i></a></li>
-                <li style="display: inline; padding-right: 5px;"><a href="http://www.instagram.com/VarunBajaj22"
-                        target="_blank"><i class="orange-text fa fa-instagram fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="https://www.instagram.com/VarunBajaj22"
+                        target="_blank"><i class="pink-text fa fa-instagram fa-3x"></i></a></li>
+                <li style="display: inline; padding-right: 5px;"><a href="https://www.youtube.com/PhoenixFruitloops"
+                        target="_blank"><i class="red-text fa fa-youtube-square fa-3x"></i></a></li>
             </ul>
         </div>
         <div class="footer-copyright">
